EZP-30761: Fixed icon spacing and notification vertical align

--- a/src/bundle/Resources/public/scss/_notifications-modal.scss
+++ b/src/bundle/Resources/public/scss/_notifications-modal.scss
@@ -95,6 +95,7 @@
 
             &__item {
                 display: inline-block;
+                vertical-align: top;
                 max-width: 100%;
                 overflow: hidden;
                 text-overflow: ellipsis;
